fixing layout issues

--- a/app/views/charts/_hr_breakdown_chart.html.erb
+++ b/app/views/charts/_hr_breakdown_chart.html.erb
@@ -6,8 +6,7 @@
       var chart;
       return chart = new Highcharts.Chart({
         chart: {
-          renderTo: 'activity_breakdown_chart<%= record_id %>',
-          zoomType: 'x'
+          renderTo: 'activity_breakdown_chart<%= record_id %>'
         },
         title: {
           text: ''
