--- a/app/views/activities/index.html.slim
+++ b/app/views/activities/index.html.slim
@@ -6,7 +6,7 @@
     header
       = render :partial => 'shared/go_home'
       h1 Exercise
-p I track my physical activity using the #{link_to 'Nike+', 'http://nikeplus.nike.com/plus/'} iPhone App and #{link_to 'SportBand', 'http://nikeplus.nike.com/plus/products/sport_band/'}. You can click and drag in the plots to zoom in. 
+p I track my physical activity using the #{link_to 'Nike+', 'http://nikeplus.nike.com/plus/'} iPhone App and #{link_to 'SportBand', 'http://nikeplus.nike.com/plus/products/sport_band/'}.
 
 .row
   .col_12
