--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,8 +12,7 @@
 .row
   .col_6#about
     h2 About
-
-    p My name is #{link_to 'Alex', 'http://skryl.org'}. I'm a software engineer living in Chicago. Welcome to my personal data aggregator. It is here to remind me where I have been and to prepare me for where I am going. Feel free to check out my #{link_to 'Resume', 'http://careers.stackoverflow.com/skryl'} or drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'}.
+    p My name is #{link_to 'Alex', 'http://skryl.org'}. I'm a software engineer living in Chicago and this is my personal data aggregator. It is here to remind me where I have been and to prepare me for where I am going. Feel free to check out my #{link_to 'Resume', 'http://careers.stackoverflow.com/skryl'} or drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'}.
 
   .col_6.last#articles
     h2= link_to 'Articles', :articles
