--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,4 +1,4 @@
 #footer
   footer
     p.meta
-      | This website is open source, and #{link_to 'available on Github', 'http://github.com/brandur/dorian'}.
+      | This website is open source, and #{link_to 'available on Github', 'http://github.com/skryl/skryl'}.
