--- a/app/views/charts/_sleep_exercise_chart.html.slim
+++ b/app/views/charts/_sleep_exercise_chart.html.slim
@@ -12,7 +12,7 @@
           chart:
             renderTo: 'exercise_chart',
           title:
-            text: ''
+            text: 'Daily Average by Month'
           xAxis:
             categories: sleepChartCategories
             labels:
