minor graph adjustments

--- a/app/views/charts/_sleep_chart.html.slim
+++ b/app/views/charts/_sleep_chart.html.slim
@@ -24,6 +24,7 @@
               minorGridLineWidth: 0
               gridLineWidth: 0
               min: 0
+              max: 20
               title:
                 text: null
             },
