auto pull note URLs from goodreads

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -39,6 +39,6 @@ p I've read #{pluralize(@books_count, 'book')} since #{@books_by_year.keys.min},
                   | ISBN13: #{link_to format_isbn13(b.isbn13), "http://www.google.com/search?tbo=p&tbm=bks&q=isbn:#{b.isbn13}"}, 
                 | finished #{finished}
                 - if b.notes_url
-                  | , #{link_to 'my notes', b.notes_url}
+                  | , #{link_to 'notes', b.notes_url}
 
     = render :partial => 'shared/footer'
