--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,8 +12,7 @@
 .row
   .col_6#about
     h2 About
-    p My name is #{link_to 'Alex', 'http://skryl.org'}, and this is my personal data aggregator. I use it as a life dashboard of sorts in order to track my successes and explain my failures. Feel free to drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'} or check out my #{link_to 'resume', 'http://careers.stackoverflow.com/skryl'}. 
-
+    p My name is #{link_to 'Alex', 'http://skryl.org'}, I am a freelance software engineer currently living in Chicago, and this is my personal data aggregator. It helps me set better goals and track my progress as I stumble along the path to enlightenment. Feel free to drop me a line at #{link_to 'aleksey.skryl@gmail.com', 'mailto:aleksey.skryl@gmail.com'} or check out my #{link_to 'resume', 'http://careers.stackoverflow.com/skryl'}.  
   .col_6.last#articles
     h2= link_to 'Writing', :articles
     p I #{link_to 'write', :articles} about technology and other interesting things. Here are my latest articles:
