--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -43,7 +43,7 @@
       li #{link_to 'pg_schema', 'https://github.com/skryl/pg_schema'} &mdash; Simple schema support for the Rails pg adapter.
       li #{link_to 'automata', 'https://github.com/skryl/automata'} &mdash; An n-Dimensional cellular automata simulation and evolution framework.
       li #{link_to 'qbwc', 'https://github.com/skryl/qbwc'} &mdash; A Rails gem for interfacing with Intuit's Quickbooks Web Connector.
-      li #{link_to 'qbxml', 'https://github.com/skryl/qbxm'} &mdash; A Quickbooks XML Parser and validation tool.
+      li #{link_to 'qbxml', 'https://github.com/skryl/qbxml'} &mdash; A Quickbooks XML Parser and validation tool.
       li #{link_to 'config_logic', 'https://github.com/skryl/config_logic'} &mdash; Intuitive configuration managment for Ruby and Rails projects.
       li #{link_to 'fuzzy_notes', 'https://github.com/skryl/fuzzy_notes'} &mdash; A CLI note manager with fuzzy search, encryption, and Evernote sync.
 
