--- a/app/views/charts/_books_chart_by_num_pages.html.slim
+++ b/app/views/charts/_books_chart_by_num_pages.html.slim
@@ -1,9 +1,5 @@
 .chart#book_chart_by_num_pages
 - content_for(:javascript) do
-  javascript:
-    var pageCountByYearCategories = [ #{@page_count_by_year.map{|k, v| k.strftime('%Y')}.map{ |d| "'#{d}'" }.join(', ')} ];
-    var pageCountByYearData       = [ #{@page_count_by_year.map{|k, v| v}.join(', ')} ];
-
   coffee:
     $ ->
       chart = new Highcharts.Chart
@@ -13,7 +9,7 @@
         title:
           text: 'Number of Pages Read by Year'
         xAxis:
-          categories: pageCountByYearCategories
+          categories: gon.pageCountByYearCategories
           title:
             text: null
         yAxis:
@@ -28,5 +24,5 @@
             dataLabels:
               enabled: true
         series: [
-          { name: 'Pages read', data: pageCountByYearData }
+          { name: 'Pages read', data: gon.pageCountByYearData }
         ]
