--- a/app/views/charts/_books_chart.html.slim
+++ b/app/views/charts/_books_chart.html.slim
@@ -1,9 +1,5 @@
 .chart#book_chart
 - content_for(:javascript) do
-  javascript:
-    var bookCountByYearCategories = [ #{@book_count_by_year.map{|k, v| k.strftime('%Y')}.map{ |d| "'#{d}'" }.join(', ')} ];
-    var bookCountByYearData       = [ #{@book_count_by_year.map{|k, v| v}.join(', ')} ];
-
   coffee:
     $ ->
       chart = new Highcharts.Chart
@@ -13,7 +9,7 @@
         title:
           text: 'Number of Books Read by Year'
         xAxis:
-          categories: bookCountByYearCategories
+          categories: gon.bookCountByYearCategories
           title:
             text: null
         yAxis:
@@ -28,5 +24,5 @@
             dataLabels:
               enabled: true
         series: [
-          { name: 'Books read', data: bookCountByYearData }
+          { name: 'Books read', data: gon.bookCountByYearData }
         ]
