--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -36,14 +36,14 @@
     h2= link_to 'Projects', "https://github.com/skryl"
     p These are the open source #{link_to 'projects', "https://github.com/skryl"} that I'm currently working on:
     ul
-      li #{link_to 'queryable', 'https://github.com/skryl/queryable'} &mdash; A lightweight library for querying Ruby collections.
-      li #{link_to 'cortex', 'https://github.com/skryl/cortex'} &mdash; A nuPIC whitepaper implementation.
-      li #{link_to 'cursed', 'https://github.com/skryl/cursed'} &mdash; A curses based window manager for tabular data.
-      li #{link_to 'vimdoc', 'https://github.com/skryl/vimdoc'} &mdash; A vimrc documentation plugin.
-      li #{link_to 'nike', 'https://github.com/skryl/nike'} &mdash; A REST Client for the Nike+ API.
-      li #{link_to 'polly', 'https://github.com/skryl/polly'} &mdash; A DSL for working with functional symbolic expressions in Ruby.
-      li #{link_to 'qbwc', 'https://github.com/skryl/qbwc'} &mdash; A Rails gem for interfacing with Intuit's Quickbooks Web Connector.
-      li #{link_to 'qbxml', 'https://github.com/skryl/qbxml'} &mdash; A Quickbooks XML Parser and validation tool.
+      li #{link_to 'queryable', 'https://github.com/skryl/queryable'} &mdash; A lightweight library for querying Ruby collections
+      li #{link_to 'cortex', 'https://github.com/skryl/cortex'} &mdash; A nuPIC whitepaper implementation
+      li #{link_to 'cursed', 'https://github.com/skryl/cursed'} &mdash; A curses based window manager for tabular data
+      li #{link_to 'vimdoc', 'https://github.com/skryl/vimdoc'} &mdash; A vimrc documentation plugin
+      li #{link_to 'nike', 'https://github.com/skryl/nike'} &mdash; A REST Client for the Nike+ API
+      li #{link_to 'polly', 'https://github.com/skryl/polly'} &mdash; A DSL for working with functional symbolic expressions in Ruby
+      li #{link_to 'qbwc', 'https://github.com/skryl/qbwc'} &mdash; A Rails gem for interfacing with Intuit's Quickbooks Web Connector
+      li #{link_to 'qbxml', 'https://github.com/skryl/qbxml'} &mdash; A Quickbooks XML Parser and validation tool
 
 .row
   .col_6#twitter
@@ -74,29 +74,12 @@
   .col_12#Physical
     h2= link_to 'Exercise', :exercise
     p I track my #{link_to 'exercise', :exercise} to improve my physical and mental performance.
-    = render :partial => 'charts/sleep_exercise_chart', :locals => { :is_compact => true }
-
-  /*.col_6#Sleep*/
-  /*  h2= link_to 'Sleep', :sleep*/
-  /*  p I track my #{link_to 'sleep', :sleep} in order to improve my mental performance.*/
-  /*  = render :partial => 'charts/sleep_chart', :locals => { :is_compact => true }*/
+    = render :partial => 'charts/exercise_summary_chart', :locals => { :is_compact => true }
 
   /*.col_6.last#Exercise*/
   /*  h2= link_to 'Exercise', :exercise*/
   /*  p I track my #{link_to 'exercise', :exercise} to stay healthy.*/
   /*  = render :partial => 'charts/exercise_chart', :locals => { :is_compact => true }*/
-
-
-  /* .row*/
-  /*   .col_6#photos*/
-  /*     h2 Photos*/
-  /*     ul.photos*/
-  /*       - @photos.each do |p|*/
-  /*         li*/
-  /*           a href=p.permalink*/
-  /*             img src=p.thumbnail_url*/
-  /*     .clear*/
-  /*     p placeholder
 
 .row
   .col_12.last
