--- a/app/views/activities/index.html.slim
+++ b/app/views/activities/index.html.slim
@@ -6,7 +6,7 @@
     header
       = render :partial => 'shared/go_home'
       h1 Exercise
-p I track my physical activity using the #{link_to 'Nike+', 'http://nikeplus.nike.com/plus/'} iPhone App and #{link_to 'SportBand', 'http://nikeplus.nike.com/plus/products/sport_band/'}.
+p I track my physical activity using the #{link_to 'TomTom Multisport GPS Watch', 'http://www.dcrainmaker.com/2013/07/tomtom-runner-multisport.html'} and #{link_to 'MapMyFitness', 'http://www.mapmyfitness.com/profile/41809135'}.
 
 .row
   .col_12
